cluster/apps/system/adguard-home/templates/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agh
  annotations:
    external-dns.alpha.kubernetes.io/controller: dns-controller
spec:
  parentRefs:
    - name: envoy-internal
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - agh.<secret:private-domain>
  rules:
    - backendRefs:
        - name: adguard-home-web-primary
          port: 3000
